@@ -2,7 +2,6 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class Solution401Tests {
@@ -13,16 +12,18 @@ public class Solution401Tests {
         int turnedOn = 1;
         List<String> expected = Arrays.asList("0:01", "0:02", "0:04", "0:08", "0:16", "0:32", "1:00", "2:00", "4:00", "8:00");
         List<String> actual = solution401.readBinaryWatch(turnedOn);
-        Collections.sort(actual);
+        expected.sort(null);
+        actual.sort(null);
         Assertions.assertEquals(expected, actual);
     }
 
     @Test
     public void example2() {
         int turnedOn = 10;
-        List<String> expected = List.of();
+        List<String> expected = Arrays.asList();
         List<String> actual = solution401.readBinaryWatch(turnedOn);
-        Collections.sort(actual);
+        expected.sort(null);
+        actual.sort(null);
         Assertions.assertEquals(expected, actual);
     }
 }
